--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -5,9 +5,9 @@ application.name=
 application.author=
 
 #**********************************
-#*           Options              *
+#*           Commands             *
 #**********************************
-option.help.name=
-option.help.arity=
-option.help.description=
-option.help.constraint-violation-message=
+command.help.name=
+command.help.arity=
+command.help.description=
+command.help.constraint-violation-message=
