--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -3,6 +3,7 @@
 #**********************************
 application.name=
 application.author=
+application.description=
 
 #**********************************
 #*           Commands             *
