--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -6,9 +6,32 @@ application.author=
 application.description=
 
 #**********************************
+#*           Variables            *
+#**********************************
+# Supported types:
+# number
+# string
+# vector
+# matrix
+variable.some-var.name=
+variable.some-var.type=
+variable.some-var.description=
+variable.some-var.constraint-violation-message=
+
+#**********************************
 #*           Commands             *
 #**********************************
 command.help.name=
 command.help.arity=
 command.help.description=
 command.help.constraint-violation-message=
+
+command.set.name=set
+command.set.arity=1
+command.set.description=Invokes setting variable mechanism. Example: set variable-name
+command.set.constraint-violation-message=
+
+command.exit.name=exit
+command.exit.arity=0
+command.exit.description=Interrupt all work exit without saving results
+command.exit.constraint-violation-message=
