Added ApplicationBuilder, introduced 'help', 'greet' and 'exit' commands

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -26,6 +26,11 @@ command.help.arity=
 command.help.description=
 command.help.constraint-violation-message=
 
+command.greet.name=greet
+command.greet.arity=0
+command.greet.description=Prints greetings
+command.greet.constraint-violation-message=
+
 command.set.name=set
 command.set.arity=1
 command.set.description=Invokes setting variable mechanism. Example: set variable-name
@@ -33,5 +38,5 @@ command.set.constraint-violation-message=
 
 command.exit.name=exit
 command.exit.arity=0
-command.exit.description=Interrupt all work exit without saving results
+command.exit.description=Interrupt all work and exit without saving results
 command.exit.constraint-violation-message=
