Improved set command

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -9,7 +9,7 @@ application.description=
 #*           Variables            *
 #**********************************
 # Supported types:
-# number
+# big_decimal
 # string
 # vector
 # matrix
@@ -34,7 +34,7 @@ command.greet.constraint-violation-message=
 command.set.name=set
 command.set.arity=1
 command.set.description=Invokes setting variable mechanism. Example: set variable-name
-command.set.constraint-violation-message=
+command.set.constraint-violation-message=Command requires 1 argument: the name of variable to be set
 
 command.exit.name=exit
 command.exit.arity=0
