Added 'get' command

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -31,6 +31,11 @@ command.greet.arity=0
 command.greet.description=Prints greetings
 command.greet.constraint-violation-message=
 
+command.get.name=
+command.get.arity=
+command.get.description=
+command.get.constraint-violation-message=
+
 command.set.name=set
 command.set.arity=1
 command.set.description=Invokes setting variable mechanism. Example: set variable-name
