Updated example property file

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -9,10 +9,8 @@ application.description=
 #*           Variables            *
 #**********************************
 # Supported types:
-# big_decimal
-# string
-# vector
-# matrix
+# BIG_DECIMAL, BIG_INTEGER, BYTE, SHORT, INTEGER, LONG, BOOLEAN,
+# CHARACTER, FLOAT, DOUBLE, STRING, VECTOR, MATRIX;
 variable.some-var.name=
 variable.some-var.type=
 variable.some-var.description=
