Added support for variables that cannot be set from input

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -14,6 +14,7 @@ application.description=
 variable.some-var.name=
 variable.some-var.type=
 variable.some-var.description=
+variable.some-var.cannot-be-set-from-input=
 variable.some-var.constraint-violation-message=
 
 #**********************************
