--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.knowm.xchart/xchart -->
         <dependency>
             <groupId>org.knowm.xchart</groupId>
