Added ability to input polynomial functions and complex numbers

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -10,12 +10,17 @@ application.description=
 #**********************************
 # Supported types:
 # BIG_DECIMAL, BIG_INTEGER, BYTE, SHORT, INTEGER, LONG, BOOLEAN,
-# CHARACTER, FLOAT, DOUBLE, STRING, VECTOR, MATRIX;
+# CHARACTER, FLOAT, DOUBLE, STRING, VECTOR, MATRIX, POLYNOMIAL_FUNCTION,
+# COMPLEX_NUMBER;
 variable.some-var.name=
 variable.some-var.type=
 variable.some-var.description=
 variable.some-var.cannot-be-set-from-input=
 variable.some-var.constraint-violation-message=
+variable.some-var.vector-length=
+variable.some-var.polynomial-max-degree=
+variable.some-var.matrix-row-count=
+variable.some-var.matrix-column-count=
 
 #**********************************
 #*           Commands             *
