Added ability to parse args

--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -29,6 +29,6 @@ variable.some-var.matrix-column-count=
 #*           Commands             *
 #**********************************
 command.help.name=
-command.help.arity=
+command.help.options=
 command.help.description=
 command.help.constraint-violation-message=
