--- a/src/main/resources/laboratory-framework.example.properties
+++ b/src/main/resources/laboratory-framework.example.properties
@@ -11,7 +11,7 @@ application.description=
 # Supported types:
 # BIG_DECIMAL, BIG_INTEGER, BYTE, SHORT, INTEGER, LONG, BOOLEAN,
 # CHARACTER, FLOAT, DOUBLE, STRING, VECTOR, MATRIX, POLYNOMIAL_FUNCTION,
-# COMPLEX_NUMBER, INTERVAL;
+# COMPLEX_NUMBER, INTERVAL, OBJECT;
 variable.some-var.name=
 variable.some-var.type=
 variable.some-var.description=
